Correctly write out the duration of an event (if the original event had a duration, no DTEND). The code to calculcate the duration was also completely messed up (but funnly not wrong): For example, a duration of 2 hours was written out as    DURATION:P7200W-55904DT475552800S And yes, that's actually just a very complicated way to write 2 hours (7200 weeks into the future, then 55904 days back, and then we'll have to go another 475552800 seconds forward, and we are two hours in the future from now)...

BUG: 92255

svn path=/trunk/kdepim/; revision=362892