libkcal/icalformatimpl.cpp
@@ -709,11 +709,11 @@ void ICalFormatImpl::writeIncidence(icalcomponent *parent,Incidence *incidence)
 
 // @TODO: turned off as it always is set to PT0S (and must not occur together with DTEND
 
-//  if (incidence->hasDuration()) {
-//    icaldurationtype duration;
-//    duration = writeICalDuration(incidence->duration());
-//    icalcomponent_add_property(parent,icalproperty_new_duration(duration));
-//  }
+  if (incidence->hasDuration()) {
+    icaldurationtype duration;
+    duration = writeICalDuration( incidence->duration() );
+    icalcomponent_add_property(parent,icalproperty_new_duration(duration));
+  }
 }
 
 void ICalFormatImpl::writeIncidenceBase( icalcomponent *parent,
@@ -2163,16 +2163,18 @@ icaldurationtype ICalFormatImpl::writeICalDuration(int seconds)
 {
   icaldurationtype d;
 
-  d.weeks    = seconds   % gSecondsPerWeek;
-  seconds   -= d.weeks   * gSecondsPerWeek;
-  d.days     = seconds   % gSecondsPerDay;
-  seconds   -= d.days    * gSecondsPerDay;
-  d.hours    = seconds   % gSecondsPerHour;
-  seconds   -= d.hours   * gSecondsPerHour;
-  d.minutes  = seconds   % gSecondsPerMinute;
-  seconds   -= d.minutes * gSecondsPerMinute;
+  d.is_neg  = (seconds<0)?1:0;
+  if (seconds<0) seconds = -seconds;
+
+  d.weeks    = seconds / gSecondsPerWeek;
+  seconds   %= gSecondsPerWeek;
+  d.days     = seconds / gSecondsPerDay;
+  seconds   %= gSecondsPerDay;
+  d.hours    = seconds / gSecondsPerHour;
+  seconds   %= gSecondsPerHour;
+  d.minutes  = seconds / gSecondsPerMinute;
+  seconds   %= gSecondsPerMinute;
   d.seconds  = seconds;
-  d.is_neg = 0;
 
   return d;
 }
